--- a/ryd_share_sky/src/styles/scss/routes/partials/_bulma_config.scss
+++ b/ryd_share_sky/src/styles/scss/routes/partials/_bulma_config.scss
@@ -12,12 +12,12 @@
 // $orange: #d97523;
 
 // // Update Colors
-// $primary: $purple;
-// $info: $gray; 
-// $success: $yellow;
+ $primary: #474747;
+ $info: #54A0FF;
+ $success: #AEFF54;
 // $warning: $dark-yellow;
-// $danger: $red;
-// $light: $light-purple;
+ $danger: #FF6054;
+ //$light: ;
 // $dark: $purple;
 // $link: $purple;
 // $link-hover: $gray;
