--- a/ryd_share_sky/src/styles/scss/routes/bundle_routes.scss
+++ b/ryd_share_sky/src/styles/scss/routes/bundle_routes.scss
@@ -1,4 +1,6 @@
 // Bundle every partials file together
 
 @import 'partials/_bulma_config.scss';
-@import 'partials/_general.scss'; 
+@import 'partials/_general.scss';
+@import 'partials/_custom_paint.scss';
+
