fixing background image

--- a/ryd_share_sky/src/styles/scss/routes/partials/_bulma_config.scss
+++ b/ryd_share_sky/src/styles/scss/routes/partials/_bulma_config.scss
@@ -24,7 +24,7 @@
 // $link-focus: $gray;
 // $text: $gray;
 
-// $background-color: #281e33;
+ $background-color: #474747;
 
 // // Update Bulma's global variables
 // $family-sans-serif: 'Lato', sans-serif;
