--- a/ryd_share_sky/src/styles/scss/routes/partials/_custom_paint.scss
+++ b/ryd_share_sky/src/styles/scss/routes/partials/_custom_paint.scss
@@ -1,4 +1,8 @@
 .login-path{
   background: url("/img/Login Page-svg.svg") no-repeat;
-  background-size: cover;
+  background-size: contain;
+}
+
+.body{
+  background: #474747;
 }
