--- a/ryd_share_sky/src/styles/scss/routes/partials/_custom_paint.scss
+++ b/ryd_share_sky/src/styles/scss/routes/partials/_custom_paint.scss
@@ -6,3 +6,16 @@
 .body{
   background: #474747;
 }
+
+.glow{
+  box-shadow: 0px 0px 100px;
+  transition: all 250ms ease-in;
+}
+
+.glow:hover{
+  box-shadow: 0px 0px 200px whitesmoke;
+}
+
+.button.is-success.glow:hover{
+  color: black;
+}
