--- a/ryd_share_sky/src/styles/scss/routes/partials/_custom_paint.scss
+++ b/ryd_share_sky/src/styles/scss/routes/partials/_custom_paint.scss
@@ -19,3 +19,20 @@
 .button.is-success.glow:hover{
   color: black;
 }
+a{
+  color: #3273dc !important;
+
+}
+
+//::-webkit-input-placeholder { /* Chrome/Opera/Safari */
+//  color: $primary;
+//}
+//::-moz-placeholder { /* Firefox 19+ */
+//  color: $primary;
+//}
+//:-ms-input-placeholder { /* IE 10+ */
+//  color: $primary;
+//}
+//:-moz-placeholder { /* Firefox 18- */
+//  color: $primary;
+//}
