--- a/ryd_share_sky/src/styles/scss/core/partials/_testimonials.scss
+++ b/ryd_share_sky/src/styles/scss/core/partials/_testimonials.scss
@@ -41,10 +41,12 @@ Testimonials Styles
         box-shadow: 0 0 5px rgba(0, 0, 0, 0.15);
     }
     blockquote:before, blockquote:after {
-        font-family: 'FontAwesome';
+        font-family: 'Font Awesome 5 Free';
+        display: inline-block;
         content: "\f10d";
         position: absolute;
         font-size: 20px;
+        font-weight: 900;
         opacity: 0.3;
         font-style: normal;
     }
@@ -54,6 +56,7 @@ Testimonials Styles
     }
     blockquote:after {
         content: "\f10e";
+        font-weight: 900;
         right: 20px;
         bottom: 35px;
     }
