--- a/ryd_share_sky/src/styles/scss/routes/partials/_bulma_config.scss
+++ b/ryd_share_sky/src/styles/scss/routes/partials/_bulma_config.scss
@@ -43,6 +43,7 @@
 @import 'node_modules/bulma/bulma'; 
 @import 'node_modules/bulma/sass/utilities/functions';
 @import 'node_modules/bulma-extensions/bulma-badge/src/sass/index';
+@import 'node_modules/bulma-extensions/bulma-pricingtable/src/sass/index';
 // @import 'node_modules/bulma-extensions/bulma-tooltip/dist/bulma-tooltip';
 // @import 'node_modules/bulma-extensions/bulma-switch/dist/bulma-switch';
 // @import 'node_modules/bulma-extensions/bulma-pageloader/dist/bulma-pageloader';
